--- a/platformio.ini
+++ b/platformio.ini
@@ -6,7 +6,7 @@ src_dir  = ./wled00
 data_dir = ./wled00/data
 lib_dir  = ./wled00/src
 build_cache_dir = ~/.buildcache
-extra_configs = 
+extra_configs =
   platformio_override.ini
 
 # ------------------------------------------------------------------------------
@@ -16,7 +16,7 @@ extra_configs =
 # ------------------------------------------------------------------------------
 
 # Travis CI binaries
-default_envs = travis_esp8266, travis_esp32
+; default_envs = travis_esp8266, travis_esp32
 
 # Release binaries
 ; default_envs = nodemcuv2, esp01_1m_full, esp32dev, custom_WS2801, custom_APA102, custom_LEDPIN_16, custom_LEDPIN_4, custom_LEDPIN_3, custom32_LEDPIN_16
@@ -27,7 +27,7 @@ default_envs = travis_esp8266, travis_esp32
 ; default_envs = esp01_1m_ota
 ; default_envs = esp01_1m_full
 ; default_envs = esp07
-; default_envs = d1_mini
+ default_envs = d1_mini
 ; default_envs = heltec_wifi_kit_8
 ; default_envs = h803wf
 ; default_envs = d1_mini_debug
@@ -87,7 +87,7 @@ platform_latest = ${common.arduino_core_2_7_4}
 # ------------------------------------------------------------------------------
 debug_flags = -D DEBUG=1 -D WLED_DEBUG -DDEBUG_ESP_WIFI -DDEBUG_ESP_HTTP_CLIENT -DDEBUG_ESP_HTTP_UPDATE -DDEBUG_ESP_HTTP_SERVER -DDEBUG_ESP_UPDATER -DDEBUG_ESP_OTA -DDEBUG_TLS_MEM
 #if needed (for memleaks etc) also add; -DDEBUG_ESP_OOM -include "umm_malloc/umm_malloc_cfg.h"
-#-DDEBUG_ESP_CORE is not working right now 
+#-DDEBUG_ESP_CORE is not working right now
 
 # ------------------------------------------------------------------------------
 # FLAGS: ldscript
@@ -113,16 +113,16 @@ debug_flags = -D DEBUG=1 -D WLED_DEBUG -DDEBUG_ESP_WIFI -DDEBUG_ESP_HTTP_CLIENT 
 #     TLS_RSA_WITH_AES_256_CBC_SHA / AES256-SHA
 #  This reduces the OTA size with ~45KB, so it's especially useful on low memory boards (512k/1m).
 # ------------------------------------------------------------------------------
-build_flags = -g -w -DMQTT_MAX_PACKET_SIZE=1024 -DPIO_FRAMEWORK_ARDUINO_LWIP_HIGHER_BANDWIDTH 
+build_flags = -g -w -DMQTT_MAX_PACKET_SIZE=1024 -DPIO_FRAMEWORK_ARDUINO_LWIP_HIGHER_BANDWIDTH
   -DSECURE_CLIENT=SECURE_CLIENT_BEARSSL -DBEARSSL_SSL_BASIC
   #build_flags for the IRremoteESP8266 library (enabled decoders have to appear here)
-  -D _IR_ENABLE_DEFAULT_=false 
-  -D DECODE_HASH=true 
+  -D _IR_ENABLE_DEFAULT_=false
+  -D DECODE_HASH=true
   -D DECODE_NEC=true
-  -D DECODE_SONY=true 
+  -D DECODE_SONY=true
   -D DECODE_SAMSUNG=true
   -D DECODE_LG=true
-  
+
 build_flags_esp8266 = ${common.build_flags} -DESP8266
 build_flags_esp32   = ${common.build_flags} -DARDUINO_ARCH_ESP32
 
@@ -136,8 +136,8 @@ build_flags_all_features =
   -D WLED_ENABLE_MQTT
   -D WLED_ENABLE_WEBSOCKETS
 
-ldscript_512k = eagle.flash.512k.ld   ;for older versions change this to eagle.flash.512k0.ld 
-ldscript_1m0m = eagle.flash.1m.ld     ;for older versions change this to eagle.flash.1m0.ld 
+ldscript_512k = eagle.flash.512k.ld   ;for older versions change this to eagle.flash.512k0.ld
+ldscript_1m0m = eagle.flash.1m.ld     ;for older versions change this to eagle.flash.1m0.ld
 ldscript_2m1m = eagle.flash.2m1m.ld
 ldscript_4m1m = eagle.flash.4m1m.ld
 ldscript_4m3m = eagle.flash.4m3m.ld
@@ -171,7 +171,7 @@ lib_deps =
     AsyncTCP@1.0.3
     https://github.com/Aircoookie/ESPAsyncWebServer
     IRremoteESP8266@2.7.3
-  #For use of the TTGO T-Display ESP32 Module with integrated TFT display uncomment the following line  
+  #For use of the TTGO T-Display ESP32 Module with integrated TFT display uncomment the following line
     #TFT_eSPI
   #For use SSD1306 OLED display uncomment following
     #U8g2@~2.27.2
@@ -186,183 +186,11 @@ lib_ignore =
 # WLED BUILDS
 # ------------------------------------------------------------------------------
 
-[env:nodemcuv2]
-board = nodemcuv2
-platform = ${common.platform_wled_default}
-board_build.ldscript = ${common.ldscript_4m1m}
-build_flags = ${common.build_flags_esp8266}
 
-# Unsupported environment due to insufficient flash
-[env:esp01]
-board = esp01
-platform = ${common.platform_wled_default}
-board_build.ldscript = ${common.ldscript_512k}
-build_flags = ${common.build_flags_esp8266} -D WLED_DISABLE_OTA -D WLED_DISABLE_ALEXA -D WLED_DISABLE_BLYNK 
-   -D WLED_DISABLE_CRONIXIE -D WLED_DISABLE_HUESYNC -D WLED_DISABLE_INFRARED -D WLED_DISABLE_MQTT -D WLED_DISABLE_WEBSOCKETS
-
-# Unsupported environment due to insufficient flash
-[env:esp01_1m_ota]
-board = esp01_1m
-platform = ${common.platform_wled_default}
-board_build.ldscript = ${common.ldscript_1m0m}
-build_flags = ${common.build_flags_esp8266} -D WLED_DISABLE_ALEXA -D WLED_DISABLE_BLYNK -D WLED_DISABLE_CRONIXIE
-    -D WLED_DISABLE_HUESYNC -D WLED_DISABLE_INFRARED -D WLED_DISABLE_MQTT -D WLED_DISABLE_WEBSOCKETS
-
-[env:esp01_1m_full]
-board = esp01_1m
-platform = ${common.platform_wled_default}
-board_build.ldscript = ${common.ldscript_1m0m}
-build_flags = ${common.build_flags_esp8266} -D WLED_DISABLE_OTA
-
-[env:esp07]
-board = esp07
-platform = ${common.platform_wled_default}
-board_build.ldscript = ${common.ldscript_4m1m}
-build_flags = ${common.build_flags_esp8266} 
 
 [env:d1_mini]
 board = d1_mini
 platform = ${common.platform_wled_default}
 upload_speed = 921600
 board_build.ldscript = ${common.ldscript_4m1m}
-build_flags = ${common.build_flags_esp8266} 
-
-[env:heltec_wifi_kit_8]
-board = d1_mini
-platform = ${common.platform_wled_default}
-board_build.ldscript = ${common.ldscript_4m1m}
 build_flags = ${common.build_flags_esp8266}
-
-[env:h803wf]
-board = d1_mini
-platform = ${common.platform_wled_default}
-board_build.ldscript = ${common.ldscript_4m1m}
-build_flags = ${common.build_flags_esp8266} -D LEDPIN=1 -D WLED_DISABLE_INFRARED
-
-[env:esp32dev]
-board = esp32dev
-platform = espressif32@1.12.4
-build_flags = ${common.build_flags_esp32} 
-lib_ignore =
-  ESPAsyncTCP
-  ESPAsyncUDP
-
-[env:esp8285_4CH_MagicHome]
-board = esp8285
-platform = ${common.platform_latest}
-board_build.ldscript = ${common.ldscript_1m0m}
-build_flags = ${common.build_flags_esp8266} -D WLED_DISABLE_HUESYNC -D WLED_USE_ANALOG_LEDS
-
-[env:esp8285_4CH_H801]
-board = esp8285
-platform = ${common.platform_latest}
-board_build.ldscript = ${common.ldscript_1m0m}
-build_flags = ${common.build_flags_esp8266} -D WLED_DISABLE_HUESYNC -D WLED_USE_ANALOG_LEDS -D WLED_USE_H801
-
-[env:esp8285_5CH_H801]
-board = esp8285
-platform = ${common.platform_latest}
-board_build.ldscript = ${common.ldscript_1m0m}
-build_flags = ${common.build_flags_esp8266} -D WLED_DISABLE_HUESYNC -D WLED_USE_ANALOG_LEDS -D WLED_USE_H801 -D WLED_ENABLE_5CH_LEDS 
-
-[env:d1_mini_5CH_Shojo_PCB]
-board = d1_mini
-platform = ${common.platform_latest}
-board_build.ldscript = ${common.ldscript_4m1m}
-build_flags = ${common.build_flags_esp8266} -D WLED_USE_ANALOG_LEDS -D WLED_USE_SHOJO_PCB -D WLED_ENABLE_5CH_LEDS 
-
-# ------------------------------------------------------------------------------
-# DEVELOPMENT BOARDS
-# ------------------------------------------------------------------------------
-
-[env:d1_mini_debug]
-board = d1_mini
-build_type = debug
-platform = ${common.platform_wled_default}
-board_build.ldscript = ${common.ldscript_4m1m}
-build_flags = ${common.build_flags_esp8266} ${common.debug_flags}
-
-[env:d1_mini_ota]
-board = d1_mini
-upload_protocol = espota
-# exchange for your WLED IP
-upload_port = "10.10.1.27"
-platform = ${common.platform_wled_default}
-board_build.ldscript = ${common.ldscript_4m1m}
-build_flags = ${common.build_flags_esp8266} 
-
-# ------------------------------------------------------------------------------
-# custom board configurations
-# ------------------------------------------------------------------------------
-
-[env:custom_LEDPIN_4]
-board = d1_mini
-platform = ${common.platform_latest}
-board_build.ldscript = ${common.ldscript_4m1m}
-build_flags = ${common.build_flags_esp8266} -D LEDPIN=4 -D IRPIN=5
-
-[env:custom_LEDPIN_16]
-board = d1_mini
-platform = ${common.platform_latest}
-board_build.ldscript = ${common.ldscript_4m1m}
-build_flags = ${common.build_flags_esp8266} -D LEDPIN=16 
-
-
-[env:custom_LEDPIN_3]
-board = d1_mini
-platform = ${common.platform_latest}
-board_build.ldscript = ${common.ldscript_4m1m}
-build_flags = ${common.build_flags_esp8266} -D LEDPIN=3
-
-[env:custom_APA102]
-board = d1_mini
-platform = ${common.platform_latest}
-board_build.ldscript = ${common.ldscript_4m1m}
-build_flags = ${common.build_flags_esp8266} -D USE_APA102
-
-[env:custom_WS2801]
-board = d1_mini
-platform = ${common.platform_latest}
-board_build.ldscript = ${common.ldscript_4m1m}
-build_flags = ${common.build_flags_esp8266} -D USE_WS2801
-
-[env:custom32_LEDPIN_16]
-board = esp32dev
-platform = espressif32@1.12.4
-build_flags = ${common.build_flags_esp32} -D LEDPIN=16 
-lib_ignore =
-  ESPAsyncTCP
-  ESPAsyncUDP
-
-[env:wemos_shield_esp32]
-board = esp32dev
-platform = espressif32@1.12.4
-upload_port = /dev/cu.SLAB_USBtoUART
-monitor_port = /dev/cu.SLAB_USBtoUART
-upload_speed = 460800
-build_flags = ${common.build_flags_esp32} -D LEDPIN=16 -D RLYPIN=19 -D BTNPIN=17
-lib_ignore =
-  ESPAsyncTCP
-  ESPAsyncUDP
-
-[env:m5atom]
-board = esp32dev
-build_flags = ${common.build_flags_esp32} -D LEDPIN=27 -D BTNPIN=39
-lib_ignore = 
-	ESPAsyncTCP
-	ESPAsyncUDP
-platform = espressif32@1.12.4
-
-# ------------------------------------------------------------------------------
-# travis test board configurations
-# ------------------------------------------------------------------------------
-
-[env:travis_esp8266]
-extends = env:d1_mini
-build_type = debug
-build_flags = ${common.build_flags_esp8266} ${common.debug_flags} ${common.build_flags_all_features}
-
-[env:travis_esp32]
-extends = env:esp32dev
-build_type = debug
-build_flags = ${common.build_flags_esp32} ${common.debug_flags} ${common.build_flags_all_features}
